--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "interface2class",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.3",
+  "description": "interface gen class",
+  "type": "module",
+  "main": "./src/index.js",
+  "bin": {
+    "i2c": "./src/index.js"
+  },
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "rspack"
+    "i2c": "node ./src/index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "zhousg",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/HarmonyOS-Next/interface2class"
+  },
   "dependencies": {
     "@ast-grep/napi": "^0.14.4",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "@inquirer/input": "^1.2.14",
+    "commander": "^11.1.0",
+    "consola": "^3.2.3"
   }
 }
