--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interface2class",
-  "version": "0.0.14",
+  "version": "0.1.0",
   "description": "interface gen class",
   "type": "module",
   "main": "./src/index.js",
@@ -25,7 +25,8 @@
   "dependencies": {
     "@ast-grep/napi": "^0.14.4",
     "commander": "^11.1.0",
-    "consola": "^3.2.3",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "magic-string": "^0.30.5",
+    "picocolors": "^1.0.0"
   }
 }
