--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "description": "interface gen class",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "bin": {
-    "i2c": "./src/index.js"
+    "i2c": "./lib/index.mjs"
   },
   "scripts": {
-    "i2c": "node ./src/index.js"
+    "i2c": "esno ./src/index.ts",
+    "build": "unbuild"
   },
   "keywords": [
     "interface",
@@ -24,9 +25,14 @@
   },
   "dependencies": {
     "@ast-grep/napi": "^0.14.4",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.10.5",
     "commander": "^11.1.0",
+    "esno": "^4.0.0",
     "fs-extra": "^11.2.0",
     "magic-string": "^0.30.5",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "typescript": "^5.3.3",
+    "unbuild": "^2.0.0"
   }
 }
